# linux-kernel-c

./: .gitignore  C programming excercises 1.tex  Example_Assignment.tex  LKACP1_CIntro.tex  LKACP2_Memory.tex  LKACP3_CMake.tex  LKACP4_KernelModules.tex  LKACP5_KernelModules2.tex  Linux kernel and C programming presentation.tex  Linux kernel and C programming.tex  makefile
examples/: CMakeLists.txt  Dockerfile  hello  hello_world.c  main.c  makefile  malloc.c  malloc.h
examples/module/: .Module.symvers.cmd  .module_hello.ko.cmd  .module_hello.mod.cmd  .module_hello.mod.o.cmd  .module_hello.o.cmd  .modules.order.cmd  CMakeLists.txt  Makefile  module_hello.c  module_hello.ko  module_hello.mod  module_hello.mod.c  modules.order
examples/module/cmake/: FindKernelHeaders.cmake
examples/terminal/: CMakeLists.txt  terminal.c  terminal.h
examples/terminal/echo/: echo.c  echo.h
sections/: gcc-and-compileing.tex  introduction.tex  the-c-programming-language.tex
styles/: ngk813_style.sty  oeNIKstyle.sty
